stop flickering

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -62,6 +62,12 @@ p
 table, button
 	color: #333333
 
+button
+	padding: 8px 24px
+	background-color: #0176D3
+	border-radius: 4px
+	color: #fff
+	
 .app
 	margin: 0 auto
 	padding-top: 80px
@@ -136,22 +142,16 @@ table, button
 ///////////////////
 .carousel2
 	display: grid
-	padding-top: 12px
+	padding: 12px 0 24px 0
 	grid-auto-flow: column
-	gap: $gap-size
+	grid-column-gap: $gap-size
 	margin: 0
-	// scroll-behavior: smooth
-	// overscroll-behavior-inline: contain
-	padding-inline: $gap-size
-	scroll-padding-inline: calc(#{$gap-size} * 2)
-	padding-block-end: calc(#{$gap-size} / 2)
 	scroll-snap-type: x mandatory
-
-	figure
-		scroll-snap-align: start
-
+	scroll-snap-align: start
+	padding-inline: $gap-size
+	// scroll-padding-inline: calc(#{$gap-size} * 2)
+	// padding-block-end: calc(#{$gap-size} / 2)
 	li
-		display: inline-block
 
 		// &:first-child
 		// 	margin-left: calc((#{$gap-size} / 2))
@@ -166,8 +166,11 @@ table, button
 				block-size: 100%
 				inset-block-start: 0
 				inset-inline-end: calc(#{$gap-size} * -1)
+	a
+		scroll-snap-align: start
 
 .carousel-container2
+	scroll-snap-align: center
 	width: 500px
 	border-radius: 16px
 	box-shadow: 0 2px 8px 2px rgba(24, 24, 24, 0.08)
